--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -146,7 +146,7 @@ executable roundtrip
                , base
                , containers
                , directory
-               , filemanip
+               , extra
                , filepath
                , ghc
                , ghc-exactprint
@@ -167,7 +167,7 @@ executable static
   if flag (roundtrip)
     build-depends: base
                  , directory
-                 , filemanip
+                 , extra
                  , filepath
                  , ghc
                  , Diff
@@ -185,12 +185,13 @@ executable prepare-hackage
     build-depends: base
                  , containers
                  , directory
-                 , filemanip
+                 , extra
                  , filepath
                  , ghc       >= 9.4.1
                  , HUnit
+                 , process >= 1.6.16
                  , text   >= 1.2.2
-                 , turtle >= 1.3.0
+                 -- , turtle >= 1.3.0
                  , ghc-boot
     buildable: True
   else
