Extend GHC 9.2.x versions tested for CI
But haskell-ci does not support 9.2.8

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -16,6 +16,13 @@ maintainer:          alan.zimm@gmail.com
 category:            Development
 build-type:          Simple
 tested-with:         GHC == 9.2.1
+                   , GHC == 9.2.2
+                   , GHC == 9.2.3
+                   , GHC == 9.2.4
+                   , GHC == 9.2.5
+                   , GHC == 9.2.6
+                   , GHC == 9.2.7
+                   -- , GHC == 9.2.8
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
